--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOORDASH</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div class="mdiv1">
     <h2 class="h1wgth"> DOORDASH</h2>
     <div class="hdlogo">
-        <img src="doordaslogo-removebg-preview.png" width="60" height="60">
+        <img src="./doordaslogo-removebg-preview.png" width="60" height="60">
         </div>
     <div class="sdiv1">
     <button type="button" class="btn1"><b>Sign in</b></button>
@@ -27,19 +27,19 @@
 
     <div class="mdiv2">
         <section class="sec1">
-    <img src="Scoot.svg"> <br>
+    <img src="./Scoot.svg"> <br>
     <h1 class="h1wgt">Become a <br>Dasher</h1>
     <p class="pwgt">As a delivery driver, you'll <br>make reliable money—working <br>anytime, anywhere.</p>
     <a href="#link"><strong>Start earning</strong></a>
     </section>
     <section class="sec2">
-        <img src="Storefront.svg">
+        <img src="./Storefront.svg">
         <h1 class="h1wgt">Become a <br>Partner</h1>
     <p class="pwgt">Grow your business and reach <br>new customers by partnering<br> with us.</p>
     <a href="#link"><strong>Sign up your store</strong></a>
     </section>
     <section class="sec3">
-        <img src="iphone.svg" width="150" height="150">
+        <img src="./iphone.svg" width="150" height="150">
         <h1 class="h1wgt">Get the best <br>DoorDash <br>experience</h1>
     <p class="pwgt">Experience the best your <br>neighborhood has to offer, all<br> in one app.</p>
     <a href="#link"><strong>Get the app</strong></a>
@@ -52,12 +52,12 @@
     <button type="button" class="btn1i"><b>Find restaurants</b></button>
     </section>
     <section class="sec5">
-        <img src="download_the_app_desktop.png" width="700" height="500">
+        <img src="./download_the_app_desktop.png" width="700" height="500">
     </section>
 </div>
     <div class="mdiv3">
         <div class="sec6">
-        <img src="dashpass_desktop.png" width="700" height="500">
+        <img src="./dashpass_desktop.png" width="700" height="500">
     </div>
     <div class="sec7">
         <h1 class="h1wgt2">DashPass is <br>delivery for less</h1>
@@ -82,7 +82,7 @@
     <button type="button" class="btn1i"><b>Shop Now</b></button>
     </div>
     <div class="sec9">
-        <img src="convenience_desktop.png" width="700" height="500">
+        <img src="./convenience_desktop.png" width="700" height="500">
     </div>
     </div>
     <div class="mdiv6">
@@ -90,10 +90,10 @@
             <h1 class="h1wgt">Helping you with to-dos and <br>gifting</h1>
         </div>
         <div class="sec11">
-            <img src="package_pickup_desktop.png" width="500" height="350">
+            <img src="./package_pickup_desktop.png" width="500" height="350">
         </div>
         <div class="sec12">
-            <img src="flowers_desktop.png" width="500" height="350">
+            <img src="./flowers_desktop.png" width="500" height="350">
         </div>
         <div class="sec13">
             <h1 class="h1wgt2">Return packages from <br>home</h1>
@@ -107,10 +107,10 @@
         <button type="button" class="btn1i"><b>Send Flowers</b></button>
         </div>
     <div class="sec15">
-        <img src="alcohol_desktop.png" width="500" height="350">
+        <img src="./alcohol_desktop.png" width="500" height="350">
     </div>
     <div class="sec16">
-        <img src="pet_supplies_desktop.png" width="500" height="350">
+        <img src="./pet_supplies_desktop.png" width="500" height="350">
     </div>
     <div class="sec17">
         <h1 class="h1wgt2">Restock the minibar</h1>
@@ -134,12 +134,12 @@
     <button type="button" class="btn1i"><b>Become a Dasher</b></button>
     </div>
     <div class="sec21">
-        <img src="become_a_dasher_desktop.png" width="700" height="450">
+        <img src="./become_a_dasher_desktop.png" width="700" height="450">
     </div>
     </div>
     <div class="mdiv8">
         <div class="sect1">
-        <img src="work_with_doordash_desktop.png" width="700" height="450">   
+        <img src="./work_with_doordash_desktop.png" width="700" height="450">   
         </div>
         <div class="sect2">
             <h1 class="h1wgt2">Grow your business <br>with DoorDash</h1>
@@ -244,7 +244,7 @@
                     <a href="">Get DoorDash for Business</a><br>
                 </div>
                 <div class="footer7i">
-                   <a href="#Q"> <img src="appgoogle-removebg-preview.png" width="250" height="200"></a>
+                   <a href="#Q"> <img src="./appgoogle-removebg-preview.png" width="250" height="200"></a>
                 </div>
                 <br>
             <div class="footer8">
@@ -265,9 +265,9 @@
          </div>
         
             <div class="fticon">
-                <a href="#"><img src="facebook-app-round-white-icon.webp" width="20" height="20"></a>
-                <a href="#"><img src="twitter_lg-removebg-preview.png" width="20" height="20"></a>
-                <a href="#"><img src="white-instagram-icon-removebg-preview.png" width="20" height="20"></a>
+                <a href="#"><img src="./facebook-app-round-white-icon.webp" width="20" height="20"></a>
+                <a href="#"><img src="./twitter_lg-removebg-preview.png" width="20" height="20"></a>
+                <a href="#"><img src="./white-instagram-icon-removebg-preview.png" width="20" height="20"></a>
               </div>
             </div>
     </footer>
